--- a/.github/workflows/azure-functionapp.yml
+++ b/.github/workflows/azure-functionapp.yml
@@ -4,7 +4,7 @@ on:
       - master
 
 env:
-  ResourceGroup: letsencrypt-func
+  ResourceGroup: neoysis-letsencrypt
 jobs:
   build:
     runs-on: ubuntu-latest
